create identities with boundaries optionally
